--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="welcome">
         <div class="parallax-inner">
-            <img src="stbl.jpg" class="profile" />
+            <img src="" class="profile" />
             <h1>I Am <br><span id="name">Ayush Padiyachi</span></h1>
             <h2>I Am A Developer On WhiteHatJR and ROBLOX.</h2>
         </div>
